# esp

./: readme.md
src/cppfilter/: CMakeLists.txt  gnuplot_i.c  plot_utils.h  sigclean.cpp  sigtaint.cpp
tex/: cosen.csv  fft-fil1.csv  fft-fil2.csv  fft-int.csv  fft-nint.csv  fft-nothing.csv  fft-rea.csv  fft-z.csv  freqs.csv  main.tex  refs.bib
tex/src/: 01-introduzione.tex  02-tecniche.tex  03-implementazione.tex  04-analisi.tex
